# venus_scripts

./: README.md  launch_qhy_svmbir_reconstruction_via_config.sh  os  pyproject.toml  setup_imars3d_notebooks  setup_laminography  start_all_imars3d_notebooks  start_angel20  start_debugging_notebooks  start_hyperctui  start_jupyter_37  start_jupyter_electron  start_jupyter_notebooks_using_conda_env_neutron_imaging  start_laminography  start_notebooks_ipts_ui.sh.bkup  start_notebooks_ipts_ui_bl10.sh  start_qhy_svmbir_notebooks.sh  start_svmbir_orhs24.sh  sys  test_from_bl10-analysis2_windows_client.txt.rtf
code/: automate_mcp_correction.py  manual_mcp_correction.py  pixi.toml
create_shutter_values/: __init__.py  create_shutter_values.py
notebooks/: test_images_corrected_by_number_of_frames.ipynb  timepix3_analysis.ipynb  utilities.py
scripts/: list_and_fix_running_browser.cfg  list_and_fix_running_browser.sh  normalization_for_timepix.py  normalization_for_timepix.sh
splash_screen/: splash_screen_with_gif.py  splash_screen_with_gif_and_input_time_duration.py
starting_scripts/: setup_all_imars3d_notebooks  setup_dev_ipts  start_angel  start_ibeatles  start_ibeatles_backup  start_ibeatles_bkup  start_ibeatles_bl10  start_ibeatles_dev_with_mamba  start_ibeatles_with_mamba  start_imars3d_notebook  start_imars3d_notebook_dev  start_jupyter  start_jupyter_310  start_jupyter_electron_next  start_laminography.sh  start_laminography_bkup  start_maverick  start_notebooks_ipts_instrument_conda.sh  start_sammy  start_sammy_lanl  start_svmbir_notebooks.sh  start_venus_notebooks
(+40 files in other folders)
