[project]
name = "shutter_values"
description = "shutter values file creator"
dynamic = ["version"]
dependencies = [
#    "python",
    "numpy",
    "args",
    "pytest"
]
license = { text = "MIT" }

[build-system]
requires = [
  "setuptools >= 40.6.0",
  "wheel",
  "toml",
  "versioningit"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 119

[tool.versioningit.vcs]
method = "git"
default-tag = "1.0.0"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}"
dirty = "{version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}+d{build_date:%Y%m%d%H%M}"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "scripts*", "docs*", "notebooks*"]

[tool.setuptools.package-data]
"*" = ["*.yml","*.yaml","*.ini"]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src", "scripts"
]
testpaths = ["tests"]
python_files = ["test*.py"]
norecursedirs = [".git", "tmp*", "_tmp*", "__pycache__", "*dataset*", "*data_set*"]
markers = [
    "mymarker: example markers goes here"
]

[tool.pylint]
max-line-length = 120
disable = ["too-many-locals",
           "too-many-statements",
           "too-many-instance-attributes",
           "too-many-arguments",
           "duplicate-code"
]

# Add additional 3rd party tool configuration here as needed
